<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_update_category"
      android:title="@string/pref_update_category">

    <CheckBoxPreference
	android:key="pref_wifi"
	android:icon="@drawable/ic_network_wifi_white_36dp"
	android:title="@string/pref_wifi"
	android:summary="@string/pref_wifi_summ"
	android:persistent="true"
	android:defaultValue="true" />

    <CheckBoxPreference
	android:key="pref_roaming"
	android:icon="@drawable/ic_network_cell_white_36dp"
	android:title="@string/pref_roaming"
	android:summary="@string/pref_roaming_summ"
	android:persistent="true"
	android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_select_category"
      android:title="@string/pref_select">

    <CheckBoxPreference
	android:key="pref_select"
	android:icon="@drawable/ic_select_all_white_36dp"
	android:title="@string/pref_select"
	android:summary="@string/pref_select_summ"
	android:persistent="true"
	android:defaultValue="true" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_numbers_category"
      android:title="@string/pref_numbers">

    <ListPreference
	android:key="pref_digits"
	android:title="@string/pref_digits"
	android:dialogTitle="@string/pref_digits"
	android:icon="@drawable/ic_list_white_36dp"
	android:dialogIcon="@drawable/ic_list_white_36dp"
	android:entries="@array/pref_digit_entries"
	android:entryValues="@array/pref_digit_values"
	android:defaultValue="@string/pref_digit_default"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_numbers_category"
      android:title="@string/chart">

    <CheckBoxPreference
	android:key="pref_fill"
	android:icon="@drawable/ic_cloud_white_36dp"
	android:title="@string/pref_fill"
	android:summary="@string/pref_fill_summ"
	android:persistent="true"
	android:defaultValue="true" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/pref_about">

    <org.billthefarmer.currency.AboutPreference
	android:key="pref_about"
	android:icon="@drawable/ic_info_outline_white_36dp"
	android:dialogIcon="@drawable/ic_info_outline_white_36dp"
	android:negativeButtonText=""
	android:title="@string/pref_about"
	android:summary="@string/pref_about_summ"
	android:dialogLayout="@layout/about" />

  </PreferenceCategory>

</PreferenceScreen>
