<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_add"
      app:showAsAction="ifRoom"
      android:title="@string/add"
      android:icon="@drawable/ic_action_add" />

  <item
      android:id="@+id/action_refresh"
      app:showAsAction="ifRoom"
      android:title="@string/refresh"
      android:icon="@drawable/ic_action_refresh" />

  <item
      android:id="@+id/action_help"
      app:showAsAction="ifRoom"
      android:title="@string/help"
      android:icon="@drawable/ic_action_help" />

  <item
      android:id="@+id/action_settings"
      app:showAsAction="ifRoom"
      android:title="@string/settings"
      android:icon="@drawable/ic_action_settings" />

</menu>
