<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_invert"
      app:showAsAction="ifRoom"
      android:title="@string/invert"
      android:icon="@drawable/ic_action_shuffle" />

  <item
      android:id="@+id/action_new_chart"
      app:showAsAction="ifRoom"
      android:title="@string/new_chart"
      android:icon="@drawable/ic_action_new_picture" />

  <item
      android:id="@+id/action_refresh"
      app:showAsAction="ifRoom"
      android:title="@string/refresh"
      android:icon="@drawable/ic_action_refresh" />

  <item
      android:id="@+id/action_hist"
      app:showAsAction="ifRoom"
      android:title="@string/hist"
      android:icon="@drawable/ic_action_time" />

</menu>
